manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jb-basic-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jb-basic-app
